<resources>
    <string name="app_name">LaLa App</string>
    <string name="artist_name_label">Artist Name</string>
    <string name="artist_name_placeholder">Artist Name…</string>
    <string name="search_btn_label">Search</string>
    <string name="search_artist_toast">Searching for Artist \"{}\"</string>
    <string name="switch_offline">Offline</string>
    <string name="switch_online">Online</string>
    <string name="master_connection_failed">Connection to Master @ {}:{} failed</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_lang_label">Language</string>
    <string name="settiings_lang_eng">English</string>
    <string name="settings_lang_gr">Greek</string>
    <string name="settings_master_ip_label">Master IP</string>
    <string name="settings_master_port_label">Master Port</string>
    <string name="app_shared_prefs">lalapp_settings</string>
    <string name="settings_save_btn_label">Save</string>
    <string name="settings_cancel_btn_label">Cancel</string>
    <string name="play_track_failure">Unable to play Track: \"{}\"</string>
    <string name="track_downloaded">Track {} has successfully downloaded!</string>
    <string name="dialog_loading">Loading...</string>
    <string name="async_task_connection_error">Connection Failed!</string>
    <string name="async_task_no_results">No Music Tracks found</string>
    <string name="loading_local_files_failed">Music files could not be retrieved from Device Storage!</string>
    <string name="title_activity_main_navigation" translatable="false">MainNavigationActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Lala App</string>
    <string name="nav_header_subtitle">Distributed Systems - AUEB 2020</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_home">Search Artists</string>
    <string name="save_sucess">Settings saved!</string>
    <string name="menu_downloads">Downloads</string>
    <string name="downloads_label">Downloaded Tracks in Device</string>
    <string name="download_label_no_tracks">No downloaded Tracks</string>
    <string name="delete_item_title">Delete Track</string>
    <string name="delete_item_text">Are you sure?</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
